--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,7 +7,7 @@
 header {
     font-family: 'Bruno Ace', cursive;
     height: fit-content;
-    background-color: rgb(94, 216, 176);
+    background-color: rgb(0, 128, 128, .25);
     text-align: center;
     color: rgb(114, 114, 50);
     text-shadow: 0px 0px 15px;
@@ -21,14 +21,15 @@ h2 {
 body {
     font-family: 'Barlow', sans-serif;
     background-color: rgba(236, 236, 106, 0.29);
+    margin:auto;
 }
 
 img {
-    height: 350px;
-    width: 500px;
-    margin: 15px 50px 15px 50px;
+    height: 18vw;
+    width: 30vw;
+    margin: 25px, 50px, 25px 50px;
     border-radius: 35px;
-    box-shadow: 0 0 15px;
+    box-shadow: 0px 0px 15px;
     transition: 1s;
 }
 
@@ -54,7 +55,7 @@ h3 {
 
 .pic_cont {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     font-size: 20px;
     text-align: center;
@@ -63,15 +64,18 @@ h3 {
 }
 
 .vid_head {
+    font-family: 'Bruno Ace', cursive;
     text-align: center;
     margin:auto;
     font-size: 35px;
     background-color: rgb(0, 128, 128, .25);
-    box-shadow: 0, 0, 
+    box-shadow: 0, 0, 15px;
+    color: rgb(114, 114, 50);
 }
 
 iframe {
     border-radius: 35px;
+    transition: 1s;
 }
 
 footer {
